[tool.poetry]
name = "jotbackend"
version = "0.1.0"
description = "API Backend for Jot"
authors = ["Austin Howard <austin@ahoward.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.3"
fastapi = "^0.88.0"
motor = "^3.1.1"
odmantic = "^0.9.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
